***********************************
CHANGES IN VERSION 2.5.1

BUG FIXES

   o Bug in install process

   o Bug in python PATH

***********************************
CHANGES IN VERSION 2.5.0

SIGNIFICANT USER-VISIBLE CHANGES

   o MergeSAM.pl is now in python based on pysam library

   o All SAM outputs are converted into BAM files

   o Check dependencies version number during installation

***********************************
CHANGES IN VERSION 2.4.2

NEW FEATURES

   o Add HiC-Pro utilities - split_reads

***********************************
CHANGES IN VERSION 2.4.1

SIGNIFICANT USER-VISIBLE CHANGES
   
   o Add PREFIX variable in installation configuration to set the installation directory

   o Improve logs reporting and organization

   o Remove SAM files by default when running the complete workflow

BUG FIXES

   o Bug fixed in rmdup

***********************************
CHANGES IN VERSION 2.4.0

BUG FIXES

   o Bug fixed if input path is not absolute

NEW FEATURES

   o Support both short and long options

SIGNIFICANT USER-VISIBLE CHANGES

   o ORGANISM option in config file replaced by REFERENCE_GENOME
   
   o CUT_SITE_5OVER option in config file replaced by LIGATION_SITE

   o GENOME_SIZE and GENOME_FRAGMENT files are detected as they are specified or from the annotation folder
 
***********************************
CHANGES IN VERSION 2.3.0

NEW FEATURES
   
   o Update error and log reporting

   o Change scripts folder

   o Automatic installation process, using make install

   o HiC-Pro can now be run using the bin/HiC-Pro bash script

   o Add licence in all scripts

   o Bug fixed in build_map - new option matrix_format asis/lower/upper/complete

   o New version of ICE normalization


***********************************
CHANGES IN VERSION 2.2.0

   o Add ICE normalization

   o Change mapping strategy. Local mapping is replaced by a global approach on trimmed reads

***********************************
CHANGES IN VERSION 2.1.0

NEW FEATURES
