@@ -268,7 +268,7 @@ which samtools > /dev/null
 if [ $? = "0" ]; then
         
     samver=`samtools 2>&1 | grep Version | cut -d" " -f2`
-    vercomp $samver "0.1.18"
+    vercomp $samver "0.1.19"
     if [[ $? == 2 ]]; then
 	echo -e "$RED""samtools v0.1.18 or higher is needed [$samver detected].""NORMAL"
 	exit 1;
